# custom_test_server

./: .env  Cargo.toml
src/: configs.rs  global_state.rs  main.rs
src/templates/: about.rs  index.rs
