[package]
name = "custom_test_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies for the engine and the browser go here

[dependencies]
perseus = { version = "0.4.2", features = [] }
sycamore = "0.8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
lazy_static = "1.4.0"
derive_more = "0.99.17"
futures = "0.3.21"
chrono = "0.4.19"
walkdir = "2.3.2"
dotenv = "0.15.0"
getrandom = { version = "0.2.5", features = ["js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
log = "0.4.14"
rand = "0.8.5"
wasm-bindgen = "0.2.79"
# //reqwasm = "0.4.1"
gloo-net = "0.5.0"
openapiv3 = "2.0.0"

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
[target.'cfg(engine)'.dependencies]
config = "0.13.1"
actix-web = { version = "4.3.1", default-features = false, features = [
  "macros",
  "cookies",
  "secure-cookies",
] }
perseus-actix-web = { version = "0.4.2", features = ["dflt-server"] }
actix-session = { version = "0.9.0", features = ["cookie-session"] }
deadpool-postgres = { version = "0.12.1", features = ["serde"] }
time = "0.3.31"
hyper = { version = "1.1.0", features = ["full"] }
pretty_env_logger = "0.5"
hyperlocal = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
derive_more = "0.99.17"
#hyper-timeout = "0.4"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
async-std = "1.12.0"
http-body-util = "0.1"
bytes = "1"
form_urlencoded = "1"
http = "1"
futures-util = { version = "0.3", default-features = false }
reqwest = { version = "0.11", features = ["json"] }
# reqwasm = "0.4.1"
# tokio = { version = "1.21.1", features = ["macros", "rt", "rt-multi-thread"] }

# [target.'cfg(target_arch = "wasm32")'.dependencies]
[target.'cfg(client)'.dependencies]
lol_alloc = "0.4.0"
reqwasm = "0.5"
rexie = "0.5.0"
web-sys = { version = "0.3", features = ["Storage"] }

[dependencies.web-sys]
features = ["InputEvent", "KeyboardEvent", "Location", "Storage"]
version = "0.3.56"
